Update Closure Compiler to 20230802 (#1050)
from 20210104.